============================================================================
STLSoft -  History

; Created:  29th March 2002
; Updated:  4th May 2016

============================================================================


4th May 2016 - 1.10.1 alpha 22 (delta)
--------------------------------------

 (see CHANGES.txt)


4th May 2016 - 1.10.1 alpha 21 (delta)
--------------------------------------

 (see CHANGES.txt)


4th May 2016 - 1.10.1 alpha 20 (delta)
--------------------------------------

 (see CHANGES.txt)


14th September 2015 - 1.10.1 alpha 19 (delta)
---------------------------------------------

 (see CHANGES.txt)


14th October 2010 - 1.10.1 alpha 15 (delta)
-------------------------------------------

 * added stlsoft/container/initialised_array.hpp
 * added stlsoft/container/partially_initialised_array.hpp
 * added stlsoft/iterator/associative_eraser_iterator.hpp:
 * added stlsoft/iterator/sorted_eraser_iterator.hpp:
 * added stlsoft/iterator/unsorted_eraser_iterator.hpp:
 * added stlsoft/string/replace_functions.hpp
 * added stlsoft/synch/refcount_policies.hpp
 * added stlsoft/synch/refcount_policies/refcount_policy_single_threaded.hpp
 * added stlsoft/tr1/nullptr.hpp
 * added stlsoft/util/bit_functions.h:
 * added stlsoft/util/bits/count_functions.h:
 * added stlsoft/util/bits/xor_functions.h:
 * added stlsoft/util/exception_string_creator.hpp
 * added stlsoft/util/string_switch.hpp
 * renamed STLSOFT_CONTRACT_ENFORCE_POSTCONDITION_STATE_INTERNAL() to STLSOFT_CONTRACT_ENFORCE_POSTCONDITION_STATE(); removed STLSOFT_CONTRACT_ENFORCE_POSTCONDITION_STATE_API(); added STLSOFT_CONTRACT_ENFORCE_POSTCONDITION_RETURN_EXTERNAL(); added STLSOFT_CONTRACT_ENFORCE_POSTCONDITION_PARAMS_EXTERNAL()
 * added winstl/filesystem/file_seek_functions.h:
 * added winstl/filesystem/file_size_functions.h:
 * added winstl/filesystem/handles/memory_mapped_file_view_handle.hpp:
 * added winstl/filesystem/handles/os_file_handle.hpp: